Fix typing errors and hydration layout shift issue with the search collection

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-:root{
-  --copy-btn-margin:10px;
+:root {
+  --copy-btn-margin: 10px;
 }
 
 @layer base {
@@ -14,7 +14,7 @@
     font-style: normal;
     font-display: swap;
   }
-  
+
   @font-face {
     font-family: "Atkinson";
     src: url("/fonts/atkinson-bold.woff") format("woff");
@@ -29,7 +29,7 @@ html {
   color-scheme: light;
   background-color: white;
   font-family: "Atkinson", sans-serif;
-  
+
 }
 
 html.dark {
@@ -84,6 +84,7 @@ article {
   from {
     transform: translateY(0px);
   }
+
   to {
     transform: translateY(-2000px);
   }
@@ -112,12 +113,14 @@ article img {
  * TWINKLE STARS
  */
 
- #twinkle-star.template {
-  @apply absolute -left-full; /* hide offscreen */
+#twinkle-star.template {
+  @apply absolute -left-full;
+  /* hide offscreen */
 }
 
 #twinkle-star.twinkle {
-  @apply animate-twinkle; /* defined in tailwind.config */
+  @apply animate-twinkle;
+  /* defined in tailwind.config */
 }
 
 
@@ -126,13 +129,15 @@ article img {
  */
 
 #meteors .shower {
-  @apply absolute inset-0 top-0;;
+  @apply absolute inset-0 top-0;
+  ;
   @apply left-1/2 -translate-x-1/2;
   @apply w-screen aspect-square;
 }
 
 #meteors .meteor {
-  @apply animate-meteor; /* defined in tailwind.config */
+  @apply animate-meteor;
+  /* defined in tailwind.config */
   @apply absolute top-1/2 left-1/2 w-px h-[75vh];
   @apply bg-gradient-to-b from-white to-transparent;
 }
@@ -153,16 +158,29 @@ article img {
   @apply rotate-315;
 }
 
-.copy-cnt{
+.copy-cnt {
   @apply absolute w-full;
-  top:var(--copy-btn-margin);
+  top: var(--copy-btn-margin);
 }
+
 .copy-btn {
-  @apply  w-[30px] fixed;
-  left:calc(100% - var(--copy-btn-margin));
+  @apply w-[30px] fixed;
+  left: calc(100% - var(--copy-btn-margin));
   transform: translateX(-100%);
 }
 
 .copy-svg {
   @apply w-full aspect-square text-white opacity-70 hover:opacity-90;
 }
+
+/* Card transition */
+/* .fade-move-enter-active,
+.fade-move-exit-active {
+  transition: all 300ms ease;
+}
+
+.fade-move-enter-from,
+.fade-move-exit-to {
+  opacity: 0;
+  transform: translateY(10px);
+} */
